[WIP] deploy test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,4 +109,5 @@ workflows:
             # - gofmt
           filters:
             branches:
-              only: master
+              # only: master
+              only: feature/kms
