Revert "[WIP] deploy test" [ci skip]
This reverts commit 9fb25175a1ab578c2bfe2fd3e554f21a13232b0e.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,5 +109,4 @@ workflows:
             # - gofmt
           filters:
             branches:
-              # only: master
-              only: feature/kms
+              only: master
