--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -10,3 +10,22 @@ update_configs:
 
     default_assignees:
       - sue445
+
+  - package_manager: "javascript"
+
+    directory: "/"
+
+    update_schedule: "weekly"
+
+    automerged_updates:
+      - match:
+          dependency_type: "development"
+          update_type: "all"
+      - match:
+          dependency_type: "production"
+          update_type: "semver:patch"
+
+    default_assignees:
+      - sue445
+
+    version_requirement_updates: "auto"
