--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "css-loader": "^3.2.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
-    "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6"
+  },
+  "dependencies": {
+    "vue": "^2.6.10"
   }
 }
