--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bulma": "^0.7.5",
     "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^1.0.0",
