--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "style-loader": "^1.0.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
+    "vue-class-component": "^7.1.0",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.39.1",
