--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "build": "webpack",
-    "build:watch": "webpack --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
