--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,38 +31,19 @@ jobs:
         restore_cache:
           key: go-mod-cache-{{ .Branch }}-{{ checksum "go.sum" }}
 
+      - run: make test
+      - run: make testrace
+
+  lint:
+    executor: golang
+
+    steps:
+      - *attach_workspace
+      - *restore_cache
       - run: go get -u golang.org/x/lint/golint
       - run: make lint
       - run: make vet
       - run: "! gofmt -d . | grep '^'"
-
-      - run: make test
-      - run: make testrace
-
-#   golint:
-#     executor: golang
-#
-#     steps:
-#       - *attach_workspace
-#       - *restore_cache
-#       - run: go get -u golang.org/x/lint/golint
-#       - run: make lint
-#
-#   go-vet:
-#     executor: golang
-#
-#     steps:
-#       - *attach_workspace
-#       - *restore_cache
-#       - run: make vet
-#
-#   gofmt:
-#     executor: golang
-#
-#     steps:
-#       - *attach_workspace
-#       - *restore_cache
-#       - run: "! gofmt -d . | grep '^'"
 
   webpack:
     executor: node
@@ -102,26 +83,16 @@ workflows:
           requires:
             - go-module/download
 
-#       - golint:
-#           requires:
-#             - go-module/download
-#
-#       - go-vet:
-#           requires:
-#             - go-module/download
-#
-#       - gofmt:
-#           requires:
-#             - go-module/download
+      - lint:
+          requires:
+            - go-module/download
 
       - webpack
 
       - deploy:
           requires:
             - test
-            # - golint
-            # - go-vet
-            # - gofmt
+            - lint
             - webpack
           filters:
             branches:
