--- a/app.yaml
+++ b/app.yaml
@@ -22,6 +22,8 @@ env_variables:
 
 instance_class: F1
 automatic_scaling:
+  min_instances: 0
+  max_instances: 2
   min_idle_instances: 0
-  max_idle_instances: 2
+  max_idle_instances: 0
   max_concurrent_requests: 80
