Enabled automerged_updates to go:modules [ci skip]

--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -8,6 +8,14 @@ update_configs:
 
     update_schedule: "weekly"
 
+    automerged_updates:
+      - match:
+          dependency_type: "development"
+          update_type: "all"
+      - match:
+          dependency_type: "production"
+          update_type: "semver:patch"
+
     default_assignees:
       - sue445
 
