--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-cli": "^3.3.7"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "clipboard": "^2.0.4",
     "vue": "^2.6.10"
