--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^3.5.3",
     "vue-class-component": "^7.1.0",
     "vue-loader": "^15.7.1",
+    "vue-property-decorator": "^8.2.1",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
