--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "clipboard": "^2.0.4",
+    "lodash": "^4.17.15",
     "vue": "^2.6.10"
   }
 }
