--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/sue445/condo3",
   "devDependencies": {
     "@types/clipboard": "^2.0.1",
+    "@types/lodash": "^4.14.137",
     "@types/node": "^12.7.2",
     "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
