--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -6,7 +6,7 @@ update_configs:
 
     directory: "/"
 
-    update_schedule: "daily"
+    update_schedule: "weekly"
 
     automerged_updates:
       - match:
