--- a/app.yaml
+++ b/app.yaml
@@ -32,3 +32,7 @@ automatic_scaling:
   min_idle_instances: 0
   max_idle_instances: 0
   max_concurrent_requests: 80
+  target_cpu_utilization: 0.95
+  target_throughput_utilization: 0.95
+  min_pending_latency: 3000ms
+  max_pending_latency: automatic
