--- a/.envrc.example
+++ b/.envrc.example
@@ -5,3 +5,4 @@ export DOORKEEPER_ACCESS_TOKEN=XXXXXXXXX
 export MEMCACHED_SERVER=127.0.0.1:11211
 export MEMCACHED_USERNAME=
 export MEMCACHED_PASSWORD=
+export SENTRY_DSN=
