--- a/.envrc.example
+++ b/.envrc.example
@@ -6,3 +6,4 @@ export MEMCACHED_SERVER=127.0.0.1:11211
 export MEMCACHED_USERNAME=
 export MEMCACHED_PASSWORD=
 export SENTRY_DSN=
+export SENTRY_ENVIRONMENT=development
