--- a/.github/workflows/go-mod-tidy-pr.yml
+++ b/.github/workflows/go-mod-tidy-pr.yml
@@ -24,7 +24,7 @@ jobs:
           timezone: Asia/Tokyo
 
       - name: Slack Notification
-        uses: homoluctus/slatify@master
+        uses: lazy-actions/slatify@master
         if: always()
         continue-on-error: true
         with:
