--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,9 +42,7 @@ jobs:
             - run: make test
             - run: make testrace
 
-      - slack/notify:
-          event: fail
-          template: basic_fail_1
+      - slack/status
 
   lint:
     executor: golang
@@ -56,9 +54,7 @@ jobs:
       - run: make lint
       - run: make vet
       - run: "! gofmt -d . | grep '^'"
-      - slack/notify:
-          event: fail
-          template: basic_fail_1
+      - slack/status
 
   webpack:
     executor: golang
@@ -72,9 +68,7 @@ jobs:
           paths:
             - public/js/*
             - public/css/*
-      - slack/notify:
-          event: fail
-          template: basic_fail_1
+      - slack/status
 
   deploy:
     docker:
@@ -89,10 +83,7 @@ jobs:
       - run: echo $BASE64_SERVICE_ACCOUNT_KEY | base64 -d > /tmp/service_account_key.json
       - run: gcloud auth activate-service-account --key-file /tmp/service_account_key.json
       - run: gcloud --project $APPENGINE_PROJECT_ID app deploy
-      - run: apk --update --no-cache add jq curl
-      - slack/notify:
-          event: fail
-          template: basic_fail_1
+      - slack/status
 
 workflows:
   build-and-deploy:
