Revert "[WIP] deploy test"
This reverts commit 51712e3631ad42fcf2261d78d1401cb7880790ed.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,4 +105,4 @@ workflows:
           context: gcp_condo3
           filters:
             branches:
-              only: fix_deploy
+              only: master
