Revert "[WIP] deploy test"
This reverts commit 5e8a76e18d623e89065e8b0badbc40380975e95f.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,4 +112,4 @@ workflows:
           context: gcp_condo3
           filters:
             branches:
-              only: go_1.23
+              only: master
