--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,6 +91,7 @@ jobs:
       - run: echo $BASE64_SERVICE_ACCOUNT_KEY | base64 -d > /tmp/service_account_key.json
       - run: gcloud auth activate-service-account --key-file /tmp/service_account_key.json
 
+      # NOTE: go123 is still beta
       # - run: gcloud --project $APPENGINE_PROJECT_ID app deploy
       - run: gcloud components install beta
       - run: gcloud beta --project $APPENGINE_PROJECT_ID app deploy
