--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,8 @@ updates:
     directory: /
     schedule:
       interval: monthly
+      time: "05:00"
+      timezone: Asia/Tokyo
     cooldown:
       default-days: 7
     assignees:
